Mie code for Qext has a bug. Probably not in Qcalc, so check abNcalc and their dependencies. Also, add something to rtmath-base. See if qt-ui can link to the libraries and pull out a string. Should be an easy test. Add saving data capability to Qcalc.
git-svn-id: file:///mnt/svn/rtmath@10 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/mie/mie.vcxproj.filters
+++ b/rtmath/mie/mie.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="tauNCalc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="abNCalc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Qcalc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="wnCalc.cpp">
@@ -45,6 +51,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="tauNCalc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="abNCalc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Qcalc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
