Mie project as far as can be done before implementing the matrix math from the old project. Began adding old rtmath to rtmath-base. Base must support matrix math for mie to build successfully.
Should add in polynomial zero-finding function, if I get around to it.

Readd special polynomials more carefully this time.
Work more on redoing all rad. trans. code in a better form.


git-svn-id: file:///mnt/svn/rtmath@15 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/mie/mie.vcxproj
+++ b/rtmath/mie/mie.vcxproj
@@ -63,8 +63,10 @@
     <ClInclude Include="abNCalc.h" />
     <ClInclude Include="AnCalc.h" />
     <ClInclude Include="mie.h" />
+    <ClInclude Include="miePhaseFunc.h" />
     <ClInclude Include="piNCalc.h" />
     <ClInclude Include="Qcalc.h" />
+    <ClInclude Include="Scalc.h" />
     <ClInclude Include="tauNCalc.h" />
     <ClInclude Include="wnCalc.h" />
   </ItemGroup>
@@ -72,8 +74,10 @@
     <ClCompile Include="abNCalc.cpp" />
     <ClCompile Include="AnCalc.cpp" />
     <ClCompile Include="mie.cpp" />
+    <ClCompile Include="miePhaseFunc.cpp" />
     <ClCompile Include="piNCalc.cpp" />
     <ClCompile Include="Qcalc.cpp" />
+    <ClCompile Include="Scalc.cpp" />
     <ClCompile Include="tauNCalc.cpp" />
     <ClCompile Include="wnCalc.cpp" />
   </ItemGroup>
