--- a/rtmath/mie/mie.vcxproj.filters
+++ b/rtmath/mie/mie.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="Qcalc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Scalc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="miePhaseFunc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="wnCalc.cpp">
@@ -57,6 +63,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Qcalc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Scalc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="miePhaseFunc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
