Lots of work done. Made many fonctions const. Finished ~65% of damatrix code. Needs further development.  - Implementation needs to recurse to do integration correctly.  - Testing definitely needed. Implemented base matrixop class - provides standard matrix operations damatrix derives from it. It overrides multiplication to also do integration,  and it will eventually support eval() damatrix needs a wrapper when used in daevalfuncmu. mu' is varying, so the matrix multiplication is evaluated at different X and Y.
Then, I need to solve the resursion issue - where to begin?
- I'll start with a basic single-scattering function (like R)
- Test the build-up by doing one, then two ... damatrix multiplications

Also needed: phase function angle correction class.
Should be relatively easy to implement.


git-svn-id: file:///mnt/svn/rtmath@22 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-base/rtmath-base.vcxproj.filters
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="zeros.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="matrixop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="damatrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="rtmath-base.h">
@@ -45,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="zeros.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="matrixop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="damatrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
