--- a/rtmath/rtmath-base/rtmath-base.vcxproj
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj
@@ -60,6 +60,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="damatrix.cpp" />
+    <ClCompile Include="matrixop.cpp" />
     <ClCompile Include="phaseFunc.cpp" />
     <ClCompile Include="polynomial.cpp" />
     <ClCompile Include="quadrature.cpp" />
@@ -67,6 +69,8 @@
     <ClCompile Include="zeros.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="damatrix.h" />
+    <ClInclude Include="matrixop.h" />
     <ClInclude Include="phaseFunc.h" />
     <ClInclude Include="polynomial.h" />
     <ClInclude Include="quadrature.h" />
