Added layer class Must derive from damatrix for return value of calcR and calcT. Need to: - add phasefunc rotation - work out layer calculation code - implement adding method - cache partial results for all damatrix calculations for speed - add in atmosphere code (stacked pp and ica) - add other phasefuncs (Rayleigh first) - polynomial zero finding for arbitrary quadrature - reexpand quadrature schemes - netcdf output - visualization - ui
git-svn-id: file:///mnt/svn/rtmath@29 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="damatrix.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="error.h" />
+    <ClInclude Include="layer.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="rtmath.h" />
     <ClInclude Include="Stdafx.h" />
@@ -90,6 +91,7 @@
   <ItemGroup>
     <ClCompile Include="damatrix.cpp" />
     <ClCompile Include="debug.cpp" />
+    <ClCompile Include="layer.cpp" />
     <ClCompile Include="rtmath.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
