Began adding double* to/from matrixop Worked on phase function rotation
Pertains to layer calculation code

Need to: figure out the layer generator
- Add layers into a model
- Model code
- Absorption code


git-svn-id: file:///mnt/svn/rtmath@30 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-base/rtmath-base.vcxproj
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj
@@ -68,6 +68,7 @@
     <ClCompile Include="zeros.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="enums.h" />
     <ClInclude Include="matrixop.h" />
     <ClInclude Include="phaseFunc.h" />
     <ClInclude Include="polynomial.h" />
