--- a/rtmath/rtmath-base/rtmath-base.vcxproj.filters
+++ b/rtmath/rtmath-base/rtmath-base.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="matrixop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="enums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
