Trying to get openGL to work for graphing. I'm using win-ui again for development, since the qt ui designer is annoying. However, this is quite slow, as msvc2010 has no c++/cli intellisense. I'm creating the managed opengl graph control first, then exporting the opengl background logic to the qt control.
The win-ui project will be developed concurrently with qt-ui. win-ui can act as a
testbed for the project. It has native development, pre-built debugging symbols,
and is faster. I don't want to have to compile the new qt debug libraries again
for my laptop. Plus, it acts as a good review for managed code. The managed code
segments can be reused in C# and visual basic projects in the future.

Also worked on rtModel and rtRun. These will be the wrapper classes to the
actual library. Win-only at this point, but I'll also write the qt-equivalents
later.


git-svn-id: file:///mnt/svn/rtmath@31 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/glgraph-win/glgraph-win.vcxproj.filters
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj.filters
@@ -21,7 +21,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="rtmath-win-ui.cpp">
+    <ClCompile Include="glgraph-winControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -30,36 +30,21 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="frmMain.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="frmLayers.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="rtRun.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="rtModel.cpp">
+    <ClCompile Include="glform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="glgraph-winControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="frmMain.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="frmLayers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rtRun.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rtModel.h">
+    <ClInclude Include="glform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -67,13 +52,5 @@
     <ResourceCompile Include="app.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="frmMain.resx">
-      <Filter>Resource Files</Filter>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmLayers.resx">
-      <Filter>Resource Files</Filter>
-    </EmbeddedResource>
   </ItemGroup>
 </Project>
