User interface construction. OpenGL found to work in x64 builds on my laptop, but my 32-bit drivers fail. Need to tweak opengl plugin so that opengl window appears on top of all other controls, such as tabs and frames.
Moved opengl plugin code to cpp file from header.
Will work on mouse/keyboard interaction next.

BUG: frmMain.h fails to load in design view on x64, as opengl plugin has issues.


git-svn-id: file:///mnt/svn/rtmath@36 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj.filters
+++ b/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj.filters
@@ -16,7 +16,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
-    <None Include="app.ico">
+    <None Include="rtlogo.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\rtmath\rtlogo.png">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
@@ -33,9 +36,6 @@
     <ClCompile Include="frmMain.cpp">
       <Filter>Header Files</Filter>
     </ClCompile>
-    <ClCompile Include="frmLayers.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="rtRun.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -51,9 +51,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="frmMain.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="frmLayers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rtRun.h">
