--- a/rtmath/netcdf-managed/netcdf-managed.vcxproj.filters
+++ b/rtmath/netcdf-managed/netcdf-managed.vcxproj.filters
@@ -14,4 +14,44 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="netcdf-managed.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncfile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncgroup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncdim.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncattr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ncvar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="nctype.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ncgroup.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ncdim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="nctype.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ncattr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ncvar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
