NetCDF can now load any netcdf version 4 file header, without custom types. TODO: - type support - casting functions for attributes and data - data saving - error checks - version 3 / version 4 loading differences - version flags in ncFile
git-svn-id: file:///mnt/svn/rtmath@41 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/netcdf-managed/netcdf-managed.vcxproj
+++ b/rtmath/netcdf-managed/netcdf-managed.vcxproj
@@ -78,6 +78,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>netcdf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -118,6 +119,7 @@
   <ItemGroup>
     <ClCompile Include="ncattr.cpp" />
     <ClCompile Include="ncdim.cpp" />
+    <ClCompile Include="ncfile.cpp" />
     <ClCompile Include="ncgroup.cpp" />
     <ClCompile Include="nctype.cpp" />
     <ClCompile Include="ncvar.cpp" />
