--- a/rtmath/netcdf-managed/netcdf-managed.vcxproj.filters
+++ b/rtmath/netcdf-managed/netcdf-managed.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="ncvar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ncfile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
