Worked on camera. Need to add PointF overrides so it can be set on a properties tab. Need to implement camera interaction.
Reorganized and combined tabs.


git-svn-id: file:///mnt/svn/rtmath@42 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/glgraph-win/glgraph-win.vcxproj
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="glform.cpp" />
     <ClCompile Include="glgraph-winControl.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -146,6 +147,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h">
+      <FileType>CppClass</FileType>
+    </ClInclude>
     <ClInclude Include="glform.h">
       <FileType>CppClass</FileType>
     </ClInclude>
