Convert from part of typeconverter is done! Now for convert to string
git-svn-id: file:///mnt/svn/rtmath@45 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/glgraph-win/glgraph-win.vcxproj
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="glgraph-winControl.h">
       <FileType>CppControl</FileType>
     </ClInclude>
+    <ClInclude Include="pointfconverter.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
