--- a/rtmath/glgraph-win/glgraph-win.vcxproj.filters
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pointfconverter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
