git-svn-id: file:///mnt/svn/rtmath@52 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj
+++ b/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj
@@ -171,6 +171,7 @@
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="frmMain.cpp" />
+    <ClCompile Include="rtBaseAtmos.cpp" />
     <ClCompile Include="rtmath-win-ui.cpp" />
     <ClCompile Include="rtModel.cpp" />
     <ClCompile Include="rtRun.cpp" />
@@ -186,6 +187,9 @@
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="rtBaseAtmos.h">
+      <FileType>CppClass</FileType>
+    </ClInclude>
     <ClInclude Include="rtModel.h">
       <FileType>CppClass</FileType>
     </ClInclude>
