--- a/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj.filters
+++ b/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="frmMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rtBaseAtmos.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rtModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rtBaseAtmos.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
