--- a/rtmath/glgraph-win/glgraph-win.vcxproj
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="glform.cpp" />
     <ClCompile Include="glgraph-winControl.cpp" />
+    <ClCompile Include="linePlot.cpp" />
     <ClCompile Include="markerSquare.cpp" />
     <ClCompile Include="Plottable.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -159,6 +160,7 @@
     <ClInclude Include="glgraph-winControl.h">
       <FileType>CppControl</FileType>
     </ClInclude>
+    <ClInclude Include="linePlot.h" />
     <ClInclude Include="markerSquare.h" />
     <ClInclude Include="Plottable.h" />
     <ClInclude Include="pointfconverter.h" />
