--- a/rtmath/glgraph-win/glgraph-win.vcxproj
+++ b/rtmath/glgraph-win/glgraph-win.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="glgraph-winControl.h">
       <FileType>CppControl</FileType>
     </ClInclude>
+    <ClInclude Include="histiogram.h" />
     <ClInclude Include="linePlot.h" />
     <ClInclude Include="markerSquare.h" />
     <ClInclude Include="Plottable.h" />
